src_cpp = files(
  'ast.cpp',
  'ast_values.cpp',
  'ast_supports.cpp',
  'ast_sel_cmp.cpp',
  'ast_sel_unify.cpp',
  'ast_sel_super.cpp',
  'ast_sel_weave.cpp',
  'ast_selectors.cpp',
  'context.cpp',
  'constants.cpp',
  'fn_utils.cpp',
  'fn_miscs.cpp',
  'fn_maps.cpp',
  'fn_lists.cpp',
  'fn_colors.cpp',
  'fn_numbers.cpp',
  'fn_strings.cpp',
  'fn_selectors.cpp',
  'color_maps.cpp',
  'environment.cpp',
  'ast_fwd_decl.cpp',
  'bind.cpp',
  'file.cpp',
  'util.cpp',
  'util_string.cpp',
  'json.cpp',
  'units.cpp',
  'values.cpp',
  'plugins.cpp',
  'source.cpp',
  'position.cpp',
  'lexer.cpp',
  'parser.cpp',
  'parser_selectors.cpp',
  'prelexer.cpp',
  'eval.cpp',
  'eval_selectors.cpp',
  'expand.cpp',
  'listize.cpp',
  'cssize.cpp',
  'extender.cpp',
  'extension.cpp',
  'stylesheet.cpp',
  'output.cpp',
  'inspect.cpp',
  'emitter.cpp',
  'check_nesting.cpp',
  'remove_placeholders.cpp',
  'sass.cpp',
  'sass_values.cpp',
  'sass_context.cpp',
  'sass_functions.cpp',
  'sass2scss.cpp',
  'backtrace.cpp',
  'operators.cpp',
  'ast2c.cpp',
  'c2ast.cpp',
  'to_value.cpp',
  'source_map.cpp',
  'error_handling.cpp',
  'memory/allocator.cpp',
  'memory/shared_ptr.cpp',
  'utf8_string.cpp',
  'base64vlq.cpp',
)
src_c = files(
  'cencode.c',
)

subdir('memory')

sass_lib = library('sass', src_cpp, src_c, src_res,
  include_directories: sass_inc,
  dependencies: deps,
  c_args: ['-DADD_EXPORTS'],
  cpp_args: ['-DADD_EXPORTS'],
  install: true
)

sass_dep = declare_dependency(link_with: sass_lib, include_directories: sass_inc)

import('pkgconfig').generate(
  sass_lib,
  description: 'A C implementation of a Sass compiler'
)
